--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "tsc": "tsc",
     "tsc:w": "tsc -w",
     "webdriver:update": "webdriver-manager update",
-    "build": "rimraf dist && npm run tsc"
+    "build": "rimraf dist && npm run tsc && cpy src/*.html src/*.css dist"
   },
   "keywords": [],
   "author": "",
@@ -59,6 +59,7 @@
     "karma-jasmine": "^0.3.8",
     "protractor": "^3.3.0",
     "rimraf": "^2.5.2",
+    "cpy-cli": "^1.0.1",
 
     "@types/core-js": "^0.9.32",
     "@types/jasmine": "^2.2.33",
