--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "aot-library",
   "version": "1.0.0",
   "description": "QuickStart package.json from the documentation, supplemented with testing support",
-  "main":"./dist/index.js",
-  "typings":"./dist/index.d.ts",
+  "main": "bundles/aot-lib.umd.js",
+  "module": "index.js",
   "scripts": {
     "start": "tsc && concurrently \"tsc -w\" \"lite-server\" ",
     "docker-build": "docker build -t ng2-quickstart .",
@@ -17,36 +17,43 @@
     "tsc": "tsc",
     "tsc:w": "tsc -w",
     "webdriver:update": "webdriver-manager update",
-    "build": "rimraf dist && npm run tsc && cpy src/*.html src/*.css dist"
+    "build": "rimraf dist && npm run tsc && cpy src/*.html src/*.css dist",
+    "clean:pre": "rimraf compiled",
+    "clean:post": "rimraf src/**/*.ngfactory.ts",
+    "build:js": "ngc -p tsconfig.dist.json",
+    "build:umd": "rollup -c rollup.config.js",
+    "precompile": "npm run clean:pre",
+    "postcompile": "npm run clean:post && cp package.json compiled",
+    "compile": "npm run build:js && npm run build:umd"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@angular/common":  "2.0.0-rc.7",
-    "@angular/compiler":  "2.0.0-rc.7",
-    "@angular/core":  "2.0.0-rc.7",
-    "@angular/forms": "2.0.0-rc.7",
-    "@angular/http":  "2.0.0-rc.7",
-    "@angular/platform-browser":  "2.0.0-rc.7",
-    "@angular/platform-browser-dynamic":  "2.0.0-rc.7",
-    "@angular/router":  "3.0.0-rc.3",
-    "@angular/upgrade":  "2.0.0-rc.7",
-
-    "systemjs": "0.19.27",
+    "@angular/common": "2.0.0",
+    "@angular/compiler": "2.0.0",
+    "@angular/compiler-cli": "^0.6.2",
+    "@angular/core": "2.0.0",
+    "@angular/forms": "2.0.0",
+    "@angular/http": "2.0.0",
+    "@angular/platform-browser": "2.0.0",
+    "@angular/platform-browser-dynamic": "2.0.0",
+    "@angular/platform-server": "2.0.0",
+    "@angular/router": "3.0.0",
+    "@angular/tsc-wrapped": "^0.3.0",
+    "@angular/upgrade": "2.0.0",
+    "angular2-in-memory-web-api": "0.0.19",
+    "bootstrap": "^3.3.6",
     "core-js": "^2.4.1",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.12",
-    "zone.js": "^0.6.21",
-
-    "angular2-in-memory-web-api": "0.0.19",
-    "bootstrap": "^3.3.6"
+    "systemjs": "0.19.27",
+    "zone.js": "^0.6.21"
   },
   "devDependencies": {
     "concurrently": "^2.2.0",
     "lite-server": "^2.2.0",
     "typescript": "^2.0.2",
-
     "canonical-path": "0.0.2",
     "http-server": "^0.9.0",
     "tslint": "^3.7.4",
@@ -59,9 +66,8 @@
     "karma-jasmine": "^0.3.8",
     "protractor": "^3.3.0",
     "rimraf": "^2.5.2",
+    "rollup": "^0.34.13",
     "cpy-cli": "^1.0.1",
-
-    "@types/core-js": "^0.9.32",
     "@types/jasmine": "^2.2.33",
     "@types/node": "^6.0.38",
     "@types/protractor": "^1.5.18"
